# tidl

./: .editorconfig  .gitignore  demo_tests.py  dl_pl.py  dl_test.py  mise.toml  prek.toml  pyproject.toml  skills-lock.json  test_auth.py  test_playlist.py
src/: __init__.py  auth.py  cfg.py  client.py  config.py  db.py  decryption.py  dl.py  download.py  downloader.py  exceptions.py  file_manager.py  orchestrator.py  postprocessor.py  protocols.py  services.py  setup_logging.py  stream_info.py  track_metadata.py
src/metadata/: __init__.py  base.py  flac.py  mp3.py  mp4.py
tests/: __init__.py  conftest.py  run_tests.py  test_auth.py  test_client.py  test_config.py  test_download.py  test_playlist.py  test_shutdown.py
